@@ -19,6 +19,7 @@ git-annex (10.20240831) UNRELEASED; urgency=medium
     remotes. External special remotes should not use that config for their
     own purposes.
   * Support "balanced=" and "fullybalanced=" in preferred content expressions.
+  * Support "sizebalanced=" and "fullysizebalanced=" too.
   * Added --rebalance option.
   * maxsize: New command to tell git-annex how large the expected maximum
     size of a repository is, and to display repository sizes.
